@@ -1,8 +1,35 @@
 # spring-jvm #
 JVM练习，熟悉启动项和简单的问题排错；
 
-## JVM运行参数 ##
-### 4个内存参数 ###
+# JVM —— 运行参数 #
+## IDEA 如何配置 ##
+例：设置JAVA虚拟机启动项
+```shell
+-server -Xmx3550m -Xms3550m -Xmn1256m -Xss128k -XX:SurvivorRatio=6 -XX:MaxPermSize=256m -XX:ParallelGCThreads=8 -XX:MaxTenuringThreshold=0 -XX:+UseConcMarkSweepGC
+```
+**解释这段配置：**
+- -server
+设置为server模式。
+- -Xmx
+设置最大堆内存为3350m
+- -Xms
+设置JVM初始堆内存为3550M。```此值可以设置与-Xmx相同，以避免每次垃圾回收完成后JVM重新分配内存。```
+- -Xmn
+设置年轻代大小为1256m。在整个堆内存大小确定的情况下，增大年轻代将会减小年老代，反之亦然。此值关系到JVM垃圾回收，对系统性能影响较大，官方推荐配置为整个堆大小的3/8。
+- -Xss
+设置较小的线程栈以支持创建更多的线程，支持海量访问，并提升系统性能。
+- -XX:SurvivorRatio
+设置年轻代中Eden区与Survivor区的比值。```系统默认是8，根据经验设置为6，则2个Survivor区与1个Eden区的比值为2:6，一个Survivor区占整个年轻代的1/8。```
+- XX:MaxPermSize
+设置持久代最大值为256M。
+-  -XX:ParallelGCThreads
+配置并行收集器的线程数。```即同时8个线程一起进行垃圾回收。此值一般配置为与CPU数目相等。```
+- -XX:MaxTenuringThreshold
+设置垃圾最大年龄（在年轻代的存活次数）。```如果设置为0的话，则年轻代对象不经过Survivor区直接进入年老代。对于年老代比较多的应用，可以提高效率；如果将此值设置为一个较大值，则年轻代对象会在Survivor区进行多次复制，这样可以增加对象再年轻代的存活时间，增加在年轻代即被回收的概率。根据被海量访问的动态Web应用之特点，其内存要么被缓存起来以减少直接访问DB，要么被快速回收以支持高并发海量请求，因此其内存对象在年轻代存活多次意义不大，可以直接进入年老代，根据实际应用效果，在这里设置此值为0。```
+- XX:+UseConcMarkSweepGC
+设置年老代为并发收集。```CMS（ConcMarkSweepGC）收集的目标是尽量减少应用的暂停时间，减少Full GC发生的几率，利用和应用程序线程并发的垃圾回收线程来标记清除年老代内存，适用于应用中存在比较多的长生命周期对象的情况。```
+
+## 4个内存参数 ##
 - **-Xmx**
 Java Heap最大值，**```默认值为物理内存的1/4```**，最佳值应该视物理内存大小及计算机内其它内存开销而定；
 - **-Xms**
@@ -12,7 +39,7 @@ Java Heap Young区大小
 - **-Xss**
 每个线程的Stack大小
 
-### 查看设置JVM内存信息 ###
+## 查看设置JVM内存信息 ##
 ```java
 // 最大可用内存，对应-Xmx
 Runtime.getRuntime().maxMemory();
@@ -28,7 +55,7 @@ Runtime.getRuntime().totalMemory()
 - totalMemory （JVM当前所占用的内存总合）
 值相当于当前JVM已使用的内存及freeMemory()的总合，会随着JVMl使用内存的增加而增加；
 
-#### 3个标准启动参数 ####
+### 3个标准启动参数 ###
 - 标准参数 “-”
 输入的时候要输“-”，JVM实现都必须实现这些参数的功能，并且向后兼容；
 例如下面代码段，**```“-”是必须要有的```**：
@@ -41,7 +68,7 @@ Runtime.getRuntime().totalMemory()
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20190314140957442.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L0N5X0xpZ2h0QnVsZQ==,size_16,color_FFFFFF,t_70)
 - 非Stable参数 “-XX”
 此参数不同版本的JVM实现会有所不同，**```未来可能随时取消，慎用；```**
-##### 常用的标准参数 #####
+#### 常用的标准参数 ####
 - **-verbose:[class|gc|jni]**
 **```启动详细输出，范例如下：```**
 ```shell
@@ -53,7 +80,7 @@ java -verbose:gc
 java -verbose:jni
 ```
 
-##### 非标准参数（扩展参数） #####
+#### 非标准参数（扩展参数） ####
 - -Xms512m
 设置初始 Java 堆大小（内存），初始内存设置为512，至少要512M。
 - -Xmx512m
@@ -68,7 +95,7 @@ java -verbose:jni
 - -Xprof
 输出 cpu 配置文件数据，跟踪正运行的程序，并将跟踪数据在标准输出输出；适合于开发环境调试。
 
-##### XX的使用 #####
+#### XX的使用 ####
 -XX作为前缀的参数列表在jvm中可能是不健壮的，SUN也不推荐使用，后续可能会在没有通知的情况下就直接取消了；但是由于这些参数中的确有很多是对我们很有用的，比如我们经常会见到的-XX:PermSize、-XX:MaxPermSize等等；
 - -XX:NewSize=1024m
 设置年轻代初始值为1024M。
@@ -85,7 +112,7 @@ java -verbose:jni
 - -XX:MaxTenuringThreshold=7
 表示一个对象如果在Survivor区（救助空间）移动了7次还没有被垃圾回收就进入年老代。如果设置为0的话，则年轻代对象不经过Survivor区，直接进入年老代，对于需要大量常驻内存的应用，这样做可以提高效率。如果将此值设置为一个较大值，则年轻代对象会在Survivor区进行多次复制，这样可以增加对象在年轻代存活时间，增加对象在年轻代被垃圾回收的概率，减少Full GC的频率，这样做可以在某种程度上提高服务稳定性。
 
-#### 启动参数的疑问 ####
+### 启动参数的疑问 ###
 - **-Xmn、-XX:NewSize / -XX:MaxNewSize、 -XX:NewRatio** ```三组参数都可以影响年轻代大小```，混合使用情况下，优先级是什么？
   + 高优先
 -XX:NewSize/-XX:MaxNewSize
@@ -98,7 +125,7 @@ java -verbose:jni
 
 ```-Xmn参数是在JDK 1.4 开始支持。```
 
-### 行为参数 ###
+## 行为参数 ##
 - -XX:-DisableExplicitGC
 禁止调用System.gc()；但jvm的gc仍然有效
 - -XX:+MaxFDLimit
@@ -117,14 +144,14 @@ java -verbose:jni
 **```启用串行GC```**
 - -XX:+UseThreadPriorities
 启用本地线程优先级
-#### 关于垃圾收集器 ####
+### 关于垃圾收集器 ###
 即 **```垃圾回收器```**，JVM给出3种选择：串行收集器、并行收集器、并发收集器。
 
-##### 串行收集器 #####
+#### 串行收集器 ####
 是jvm的默认GC方式，一般适用于小型应用和单处理器，算法比较简单，GC效率也较高，但可能会给应用带来停顿；
 - -XX:+UseSerialGC
 设置串行收集器
-##### 并行收集器（吞吐量优先） #####
+#### 并行收集器（吞吐量优先） ####
 是指GC运行时，对应用程序运行没有影响，GC和app两者的线程在并发执行，这样可以最大限度不影响app的运行；
 - -XX:+UseParallelGC
 设置为并行收集器。此配置仅对年轻代有效。即 **```年轻代使用并行收集，而年老代仍使用串行收集。```**
@@ -136,7 +163,7 @@ java -verbose:jni
 **```设置每次年轻代垃圾回收的最长时间（单位毫秒）```**。如果无法满足此时间，JVM会自动调整年轻代大小，以满足此时间。
 - -XX:+UseAdaptiveSizePolicy
 设置此选项后，并行收集器会自动调整年轻代Eden区大小和Survivor区大小的比例，以达成目标系统规定的最低响应时间或者收集频率等指标。此参数建议在使用并行收集器时，一直打开。
-##### 并发收集器（响应时间优先） #####
+#### 并发收集器（响应时间优先） ####
 是指多个线程并发执行GC，一般适用于多处理器系统中，可以提高GC的效率，但算法复杂，系统消耗较大；
 - -XX:+UseConcMarkSweepGC
 **```即CMS收集，设置年老代为并发收集。```**
@@ -153,7 +180,7 @@ CMS收集是JDK1.4后期版本开始引入的新GC算法。它的主要适合场
 - -XX:CMSInitiatingOccupancyFraction=70
 表示年老代内存空间使用到70%时就开始执行CMS收集，以确保年老代有足够的空间接纳来自年轻代的对象，避免Full GC的发生。
 
-### 性能调优参数 ###
+## 性能调优参数 ##
 - -XX:LargePageSizeInBytes=4m
 设置用于Java堆的大页面尺寸
 - -XX:MaxHeapFreeRatio=70
@@ -177,7 +204,7 @@ GC后java堆中空闲量占的最小比例
 
 ```黑体加粗在实际工作中是经常用来调试的```
 
-### 调试参数 ###
+## 调试参数 ##
 - -XX:-CITime
 打印消耗在JIT编译的时间
 - -XX:ErrorFile=./hs_err_pid<pid>.log
